--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   <meta name="description" content="WebGPU player"/>
 </head>
 <body class="home" style="opacity: 0;" draggable="false">
+  <script src="/data/shaders/default.wgsl" type="text/wgsl"></script>
 </body>
 </html>
