--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,5 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,minimum-scale=1"/>
   <meta name="description" content="WebGPU player"/>
 </head>
-<body class="home" style="opacity: 0;" draggable="false">
-  <script src="/data/shaders/default.wgsl" type="text/wgsl"></script>
-</body>
+<body class="home" style="opacity: 1;" draggable="false"></body>
 </html>
