--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,44 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,minimum-scale=1"/>
   <meta name="description" content="WebGPU player"/>
 </head>
-<body class="home" style="opacity: 1;" draggable="false"></body>
+<body class="home" style="opacity: 1;" draggable="false">
+  <nav class="toolbar toolbar-main hideable">
+    <button id="record-button" class="icon-record" title="Record"></button>
+    <button id="play-button" class="icon-stop" title="Stop"></button>
+    <button id="load-images-button" class="icon-image-multiple" title="Load images from input directory"></button>
+    <button id="webcam-button" class="icon-webcam" title="Activate webcam"></button>
+    <button id="screen-share-button" class="icon-screen-share" title="Share screen"></button>
+    <button id="record-images-button" class="icon-file-image" title="Record images"></button>
+    <button id="record-video-button" class="icon-file-video" title="Record video"></button>
+    <input id="frame-field" type="text" readonly/>
+    <select id="tab-selector">
+      <option value="0" selected default>Render</option>
+      <option value="1">Draw1</option>
+      <option value="2">Draw2</option>
+      <option value="3">Draw3</option>
+      <option value="4">Draw4</option>
+    </select>
+    <div class="message" id="message-field"></div>
+  </nav>
+  <main class="main">
+    <section class="tabs">
+      <div class="tab-pane active" id="player-container">
+      </div>
+      <div class="tab-pane">
+        <canvas class='canvas-frame' id="draw1"></canvas>
+      </div>
+      <div class="tab-pane">
+        <canvas class='canvas-frame' id="draw2"></canvas>
+      </div>
+      <div class="tab-pane">
+        <canvas class='canvas-frame' id="draw3"></canvas>
+      </div>
+      <div class="tab-pane">
+        <canvas class='canvas-frame' id="draw4"></canvas>
+      </div>
+    </section>
+  </main>
+  <menu class="menu-controls hideable">
+  </menu>
+</body>
 </html>
