video texture mvp

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <button id="screen-share-button" class="icon-screen-share" title="Share screen"></button>
     <button id="record-images-button" class="icon-file-image" title="Record images"></button>
     <button id="record-video-button" class="icon-file-video" title="Record video"></button>
-    <input id="frame-field" type="text" readonly/>
+    <input id="counter-field" type="text" readonly/>
     <select id="tab-selector">
       <option value="0" selected default>Render</option>
       <option value="1">Draw1</option>
@@ -26,7 +26,7 @@
     </select>
     <div class="message" id="message-field"></div>
   </nav>
-  <main class="main">
+  <main class="main" id="main-container">
     <section class="tabs">
       <div class="tab-pane active" id="player-container">
       </div>
