--- a/public/index.html
+++ b/public/index.html
@@ -17,32 +17,11 @@
     <button id="record-images-button" class="icon-file-image" title="Record images"></button>
     <button id="record-video-button" class="icon-file-video" title="Record video"></button>
     <input id="counter-field" type="text" readonly/>
-    <select id="tab-selector">
-      <option value="0" selected default>Render</option>
-      <option value="1">Draw1</option>
-      <option value="2">Draw2</option>
-      <option value="3">Draw3</option>
-      <option value="4">Draw4</option>
-    </select>
     <div class="message" id="message-field"></div>
   </nav>
   <main class="main" id="main-container">
-    <section class="tabs">
-      <div class="tab-pane active" id="player-container">
+      <div id="player-container">
       </div>
-      <div class="tab-pane">
-        <canvas class='canvas-frame' id="draw1"></canvas>
-      </div>
-      <div class="tab-pane">
-        <canvas class='canvas-frame' id="draw2"></canvas>
-      </div>
-      <div class="tab-pane">
-        <canvas class='canvas-frame' id="draw3"></canvas>
-      </div>
-      <div class="tab-pane">
-        <canvas class='canvas-frame' id="draw4"></canvas>
-      </div>
-    </section>
   </main>
   <menu class="menu-controls hideable">
   </menu>
