--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="dist/main.js" async></script>
+  <script src="/dist/main.js" async></script>
   <title>Webgx</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,minimum-scale=1"/>
@@ -21,8 +21,8 @@
   <main class="main" id="main-container">
       <div id="player-container">
       </div>
+      <div id="horizontal-guide" class="guide horizontal hidden"></div>
+      <div id="vertical-guide" class="guide vertical hidden"></div>
   </main>
-  <menu class="menu-controls hideable">
-  </menu>
 </body>
 </html>
