Create wave-new ca Add display field, hooks

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <button id="record-images-button" class="icon-file-image" title="Record images"></button>
     <button id="record-video-button" class="icon-file-video" title="Record video"></button>
     <input id="counter-field" type="text" readonly/>
+    <input id="status-field" type="text" readonly/>
   </nav>
   <main class="main" id="main-container">
       <div id="player-container">
